--- a/_posts/2024-12-18-first.md
+++ b/_posts/2024-12-18-first.md
@@ -6,3 +6,5 @@ title:  "Welcome to Jekyll!"
 # 오늘 처음 블로그를 만들었어요
 
 앞으로 열심히 해보겠습니다.
+
+![다운로드](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\다운로드.jpeg)
