이미지 또 추가함

--- a/_posts/2024-12-18-first.md
+++ b/_posts/2024-12-18-first.md
@@ -7,4 +7,4 @@ title:  "Welcome to Jekyll!"
 
 앞으로 열심히 해보겠습니다.
 
-![다운로드](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\다운로드.jpeg)
+![habu289](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\habu289.jpg)
