이미지 추가햇다3

--- a/_posts/2024-12-18-first.md
+++ b/_posts/2024-12-18-first.md
@@ -8,3 +8,5 @@ title:  "Welcome to Jekyll!"
 앞으로 열심히 해보겠습니다.
 
 ![habu289](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\habu289.jpg)
+
+![hasbro1](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\hasbro1.jpg)
