이미지추가함4

--- a/_posts/2024-12-18-first.md
+++ b/_posts/2024-12-18-first.md
@@ -7,6 +7,4 @@ title:  "Welcome to Jekyll!"
 
 앞으로 열심히 해보겠습니다.
 
-![habu289](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\habu289.jpg)
-
-![hasbro1](C:\projects\HABU289-github-blog\HABU289.github.io\images\2024-12-18-first\hasbro1.jpg)
+![habu289](../images/2024-12-18-first/habu289-1734582085722-7.jpg)
