이미지 추가 5

--- a/_posts/2024-12-18-first.md
+++ b/_posts/2024-12-18-first.md
@@ -8,3 +8,5 @@ title:  "Welcome to Jekyll!"
 앞으로 열심히 해보겠습니다.
 
 ![habu289](../images/2024-12-18-first/habu289-1734582085722-7.jpg)
+
+![hasbro1](../images/2024-12-18-first/hasbro1-1734608978692-1.jpg)
